--- a/Celbridge/Celbridge/Resources/Strings/en-US/Resources.resw
+++ b/Celbridge/Celbridge/Resources/Strings/en-US/Resources.resw
@@ -405,8 +405,14 @@
   <data name="Documents_OpenDocumentFailedTitle" xml:space="preserve">
     <value>Open Document Failed</value>
   </data>
+  <data name="Documents_SaveDocumentFailedTitle" xml:space="preserve">
+    <value>Save Document Failed</value>
+  </data>
   <data name="Documents_OpenDocumentFailedGeneric" xml:space="preserve">
     <value>An error occurred while attempting to open '{0}'.</value>
+  </data>
+  <data name="Documents_SaveDocumentFailedGeneric" xml:space="preserve">
+    <value>An error occurred while attempting to save '{0}'.</value>
   </data>
   <data name="Documents_OpenDocumentFailedNotSupported" xml:space="preserve">
     <value>The file format is not supported: '{0}'</value>
