Use IPython REPL in console window
Add support for installing packages via cel.install() command

--- a/Celbridge/Celbridge/Resources/Strings/en-US/Resources.resw
+++ b/Celbridge/Celbridge/Resources/Strings/en-US/Resources.resw
@@ -453,4 +453,7 @@
 
 Do you wish to continue?</value>
   </data>
+  <data name="ResourceTree_Run" xml:space="preserve">
+    <value>Run</value>
+  </data>
 </root>
